bugfix: add z-index for icons and implement order feeds

--- a/src/components/order-description/order-description.module.css
+++ b/src/components/order-description/order-description.module.css
@@ -4,6 +4,8 @@
     max-width: 640px;
     margin: 0 auto;
     align-content: center;
+    z-index: 4;
+    position: relative;
 }
 
 .orderNumber {
