--- a/src/components/order-feed/order-feed.module.css
+++ b/src/components/order-feed/order-feed.module.css
@@ -77,15 +77,6 @@
     margin: -30px 0 0 -30px;
 }
 
-.ingredientsExtra {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin: 0;
-
-}
-
 .ingredientBorder {
     width: 64px;
     height: 64px;
@@ -112,5 +103,14 @@
             rgba(243, 51, 51, 1) 50%,
             rgba(67, 227, 227, 1) 100%
     );
+}
+
+.link {
+    text-decoration: none;
+    color: inherit;
+}
+
+.link:visited {
+    color: inherit;
 }
 
